--- a/EmployeeDetailsApplication/Views/Employees/Create.cshtml
+++ b/EmployeeDetailsApplication/Views/Employees/Create.cshtml
@@ -18,8 +18,8 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DepartmentId" class="control-label"></label>
-                <select asp-for="DepartmentId" class ="form-control" asp-items="ViewBag.DepartmentName"></select>
+                <label asp-for="DepartmentId" class="control-label">Department</label>
+                <select asp-for="DepartmentId" class="form-control" asp-items="ViewBag.DepartmentName"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Details" class="control-label"></label>
@@ -32,12 +32,13 @@
                 <span asp-validation-for="Experience" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EmployeeSkill" class="control-label"></label>
+                <label asp-for="EmployeeSkill" class="control-label">Skills</label>
                 <input asp-for="EmployeeSkill" class="form-control" />
                 <span asp-validation-for="EmployeeSkill" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="EmployeeProject" class="control-label"></label>
+                <label asp-for="EmployeeProject" class="control-label">Projects</label>
                 <input asp-for="EmployeeProject" class="form-control" />
                 <span asp-validation-for="EmployeeProject" class="text-danger"></span>
             </div>
@@ -53,5 +54,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
